2010-02-19  Dustin J. Mitchell <dustin@zmanda.com>
	* xfer-src/xfer-element.c xfer-src/xfer-element.h: setup now returns a
	  boolean
	* xfer-src/xfer.c: if any setup operation fails, skip the starts and
	  return
	* device-src/xfer-dest-taper-directtcp.c
	  device-src/xfer-source-recovery.c xfer-src/dest-directtcp-connect.c
	  xfer-src/element-glue.c xfer-src/source-directtcp-connect.c
	  xfer-src/xfer-test.c: change setup() methods to return a boolean
	* device-src/ndmp-device.c: clean up listen_addrs if not null

2010-02-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/file.c (mkpdir): Fix.

2010-02-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/file.c (mkpdir): Don't use access.

2010-02-18  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report/human.pm: fixed columnspec handling, removed POD

2010-02-18  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/xfer-source-recovery.c: add XFER_MECH_DIRECTTCP_CONNECT,
	  with attendant API changes (constructor takes a device; sends
	  XMSG_READY)
	* device-src/xfer-device.h: prototype changes
	* xfer-src/element-glue.c: remove debug message
	* perl/Amanda/Xfer.pod: docs
	* perl/Amanda/XferServer.swg: SWIG new parameters
	* perl/Amanda/Recovery/Clerk.pm: use new API
	* installcheck/Amanda_Xfer.pl: test
	* installcheck/Amanda_Recovery_Clerk.pl: test some more
	* installcheck/Installcheck/Dumpcache.pm: add code to determine
	  the timestamps for a cached dump after loading it

2010-02-18  Dustin J. Mitchell <dustin@zmanda.com>
	* xfer-src/xfer.c xfer-src/xfer-element.c xfer-src/xfer-element.h:
	  add a get_xfer_mechs method to xfer elements so that elements can
	  dynamically specify their mech pairs

2010-02-18  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: check for fatal errors in directtcp
	  methods
	* device-src/xfer-dest-taper-directtcp.c: track device_listen
	  failures better
	* installcheck/Amanda_Xfer.pl: test setup cancellation